snapshots/serde/test_suite/tests/compiletest.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 9,
  "kind": "unit",
  "spaces": [
    {
      "name": "ui",
      "start_line": 6,
      "end_line": 9,
      "kind": "function",
      "spaces": [],
      "metrics": {
        "nargs": {
          "total_functions": 0.0,
          "total_closures": 0.0,
          "average_functions": 0.0,
          "average_closures": 0.0,
          "total": 0.0,
          "average": 0.0,
          "functions_min": 0.0,
          "functions_max": 0.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "nexits": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cognitive": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cyclomatic": {
          "sum": 1.0,
          "average": 1.0,
          "min": 1.0,
          "max": 1.0
        },
        "halstead": {
          "n1": 7.0,
          "N1": 10.0,
          "n2": 6.0,
          "N2": 7.0,
          "length": 17.0,
          "estimated_program_length": 35.161259458730164,
          "purity_ratio": 2.068309379925304,
          "vocabulary": 13.0,
          "volume": 62.907475208398566,
          "difficulty": 4.083333333333333,
          "level": 0.2448979591836735,
          "effort": 256.8721904342941,
          "time": 14.270677246349672,
          "bugs": 0.013469665311234006
        },
        "loc": {
          "sloc": 4.0,
          "ploc": 4.0,
          "lloc": 2.0,
          "cloc": 0.0,
          "blank": 0.0,
          "sloc_average": 4.0,
          "ploc_average": 4.0,
          "lloc_average": 2.0,
          "cloc_average": 0.0,
          "blank_average": 0.0,
          "sloc_min": 4.0,
          "sloc_max": 4.0,
          "cloc_min": 0.0,
          "cloc_max": 0.0,
          "ploc_min": 4.0,
          "ploc_max": 4.0,
          "lloc_min": 2.0,
          "lloc_max": 2.0,
          "blank_min": 0.0,
          "blank_max": 0.0
        },
        "nom": {
          "functions": 1.0,
          "closures": 0.0,
          "functions_average": 1.0,
          "closures_average": 0.0,
          "total": 1.0,
          "average": 1.0,
          "functions_min": 1.0,
          "functions_max": 1.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "mi": {
          "mi_original": 126.77537335305064,
          "mi_sei": 107.29917031068467,
          "mi_visual_studio": 74.13764523570212
        },
        "abc": {
          "assignments": 0.0,
          "branches": 0.0,
          "conditions": 0.0,
          "magnitude": 0.0,
          "assignments_average": 0.0,
          "branches_average": 0.0,
          "conditions_average": 0.0,
          "assignments_min": 0.0,
          "assignments_max": 0.0,
          "branches_min": 0.0,
          "branches_max": 0.0,
          "conditions_min": 0.0,
          "conditions_max": 0.0
        }
      }
    }
  ],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": 0.0,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": 0.0,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 2.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 8.0,
      "N1": 20.0,
      "n2": 18.0,
      "N2": 22.0,
      "length": 42.0,
      "estimated_program_length": 99.05865002596161,
      "purity_ratio": 2.3585392863324195,
      "vocabulary": 26.0,
      "volume": 197.41846816192586,
      "difficulty": 4.888888888888889,
      "level": 0.20454545454545453,
      "effort": 965.1569554583043,
      "time": 53.619830858794685,
      "bugs": 0.03255447593862736
    },
    "loc": {
      "sloc": 9.0,
      "ploc": 9.0,
      "lloc": 2.0,
      "cloc": 0.0,
      "blank": 0.0,
      "sloc_average": 4.5,
      "ploc_average": 4.5,
      "lloc_average": 1.0,
      "cloc_average": 0.0,
      "blank_average": 0.0,
      "sloc_min": 4.0,
      "sloc_max": 4.0,
      "cloc_min": 0.0,
      "cloc_max": 0.0,
      "ploc_min": 4.0,
      "ploc_max": 4.0,
      "lloc_min": 2.0,
      "lloc_max": 2.0,
      "blank_min": 0.0,
      "blank_max": 0.0
    },
    "nom": {
      "functions": 1.0,
      "closures": 0.0,
      "functions_average": 0.5,
      "closures_average": 0.0,
      "total": 1.0,
      "average": 0.5,
      "functions_min": 0.0,
      "functions_max": 1.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 107.46126831284589,
      "mi_sei": 79.53662660937725,
      "mi_visual_studio": 62.842846966576545
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
