snapshots/serde/test_suite/tests/regression.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 3,
  "kind": "unit",
  "spaces": [],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 1.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 4.0,
      "N1": 4.0,
      "n2": 4.0,
      "N2": 4.0,
      "length": 8.0,
      "estimated_program_length": 16.0,
      "purity_ratio": 2.0,
      "vocabulary": 8.0,
      "volume": 24.0,
      "difficulty": 2.0,
      "level": 0.5,
      "effort": 48.0,
      "time": 2.6666666666666665,
      "bugs": 0.004402569665192835
    },
    "loc": {
      "sloc": 3.0,
      "ploc": 3.0,
      "lloc": 1.0,
      "cloc": 0.0,
      "blank": 0.0,
      "sloc_average": 3.0,
      "ploc_average": 3.0,
      "lloc_average": 1.0,
      "cloc_average": 0.0,
      "blank_average": 0.0,
      "sloc_min": 3.0,
      "sloc_max": 3.0,
      "cloc_min": 0.0,
      "cloc_max": 0.0,
      "ploc_min": 3.0,
      "ploc_max": 3.0,
      "lloc_min": 1.0,
      "lloc_max": 1.0,
      "blank_min": 0.0,
      "blank_max": 0.0
    },
    "nom": {
      "functions": 0.0,
      "closures": 0.0,
      "functions_average": 0.0,
      "closures_average": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 136.4466010057673,
      "mi_sei": 121.25180248456726,
      "mi_visual_studio": 79.79333392150134
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
