snapshots/serde/test_suite/tests/test_identifier.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 88
kind: unit
spaces:
  - name: test_variant_identifier
    start_line: 9
    end_line: 23
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 7
        N1: 52
        n2: 21
        N2: 45
        length: 97
        estimated_program_length: 111.89
        purity_ratio: 1.154
        vocabulary: 28
        volume: 466.313
        difficulty: 7.5
        level: 0.133
        effort: 3497.351
        time: 194.297
        bugs: 0.077
      loc:
        sloc: 15
        ploc: 14
        lloc: 6
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 6
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 6
        lloc_max: 6
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 94.946
        mi_sei: 61.38
        mi_visual_studio: 55.524
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: test_field_identifier
    start_line: 26
    end_line: 40
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 7
        N1: 52
        n2: 23
        N2: 47
        length: 99
        estimated_program_length: 123.693
        purity_ratio: 1.249
        vocabulary: 30
        volume: 485.782
        difficulty: 7.152
        level: 0.14
        effort: 3474.399
        time: 193.022
        bugs: 0.076
      loc:
        sloc: 15
        ploc: 14
        lloc: 6
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 6
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 6
        lloc_max: 6
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 94.734
        mi_sei: 61.073
        mi_visual_studio: 55.4
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: test_unit_fallthrough
    start_line: 43
    end_line: 58
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 7
        N1: 48
        n2: 23
        N2: 44
        length: 92
        estimated_program_length: 123.693
        purity_ratio: 1.344
        vocabulary: 30
        volume: 451.434
        difficulty: 6.696
        level: 0.149
        effort: 3022.645
        time: 167.925
        bugs: 0.07
      loc:
        sloc: 16
        ploc: 15
        lloc: 5
        cloc: 0
        blank: 1
        sloc_average: 16
        ploc_average: 15
        lloc_average: 5
        cloc_average: 0
        blank_average: 1
        sloc_min: 16
        sloc_max: 16
        cloc_min: 0
        cloc_max: 0
        ploc_min: 15
        ploc_max: 15
        lloc_min: 5
        lloc_max: 5
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 94.069
        mi_sei: 60.114
        mi_visual_studio: 55.011
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: test_newtype_fallthrough
    start_line: 61
    end_line: 71
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 8
        N1: 22
        n2: 17
        N2: 19
        length: 41
        estimated_program_length: 93.487
        purity_ratio: 2.28
        vocabulary: 25
        volume: 190.398
        difficulty: 4.471
        level: 0.224
        effort: 851.192
        time: 47.288
        bugs: 0.03
      loc:
        sloc: 11
        ploc: 10
        lloc: 1
        cloc: 0
        blank: 1
        sloc_average: 11
        ploc_average: 10
        lloc_average: 1
        cloc_average: 0
        blank_average: 1
        sloc_min: 11
        sloc_max: 11
        cloc_min: 0
        cloc_max: 0
        ploc_min: 10
        ploc_max: 10
        lloc_min: 1
        lloc_max: 1
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 104.629
        mi_sei: 75.348
        mi_visual_studio: 61.186
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: test_newtype_fallthrough_generic
    start_line: 74
    end_line: 88
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 10
        N1: 56
        n2: 26
        N2: 47
        length: 103
        estimated_program_length: 155.431
        purity_ratio: 1.509
        vocabulary: 36
        volume: 532.502
        difficulty: 9.038
        level: 0.111
        effort: 4813.001
        time: 267.389
        bugs: 0.095
      loc:
        sloc: 15
        ploc: 14
        lloc: 5
        cloc: 0
        blank: 1
        sloc_average: 15
        ploc_average: 14
        lloc_average: 5
        cloc_average: 0
        blank_average: 1
        sloc_min: 15
        sloc_max: 15
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 5
        lloc_max: 5
        blank_min: 1
        blank_max: 1
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 94.256
        mi_sei: 60.384
        mi_visual_studio: 55.121
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 6
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 11
    N1: 242
    n2: 44
    N2: 215
    length: 457
    estimated_program_length: 278.269
    purity_ratio: 0.609
    vocabulary: 55
    volume: 2642.081
    difficulty: 26.875
    level: 0.037
    effort: 71005.937
    time: 3944.774
    bugs: 0.572
  loc:
    sloc: 88
    ploc: 75
    lloc: 23
    cloc: 1
    blank: 12
    sloc_average: 14.667
    ploc_average: 12.5
    lloc_average: 3.833
    cloc_average: 0.167
    blank_average: 2
    sloc_min: 11
    sloc_max: 16
    cloc_min: 0
    cloc_max: 0
    ploc_min: 10
    ploc_max: 15
    lloc_min: 1
    lloc_max: 6
    blank_min: 1
    blank_max: 1
  nom:
    functions: 5
    closures: 0
    functions_average: 0.833
    closures_average: 0
    total: 5
    average: 0.833
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 56.115
    mi_sei: 14.086
    mi_visual_studio: 32.816
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

