snapshots/serde/test_suite/tests/test_roundtrip.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 42
kind: unit
spaces:
  - name: ip_addr_roundtrip
    start_line: 10
    end_line: 23
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 10
        N1: 28
        n2: 21
        N2: 25
        length: 53
        estimated_program_length: 125.458
        purity_ratio: 2.367
        vocabulary: 31
        volume: 262.572
        difficulty: 5.952
        level: 0.168
        effort: 1562.931
        time: 86.829
        bugs: 0.045
      loc:
        sloc: 14
        ploc: 14
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 14
        ploc_average: 14
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 14
        sloc_max: 14
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 99.051
        mi_sei: 67.301
        mi_visual_studio: 57.924
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: socket_addr_roundtrip
    start_line: 26
    end_line: 42
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 10
        N1: 35
        n2: 24
        N2: 35
        length: 70
        estimated_program_length: 143.258
        purity_ratio: 2.047
        vocabulary: 34
        volume: 356.122
        difficulty: 7.292
        level: 0.137
        effort: 2596.726
        time: 144.263
        bugs: 0.063
      loc:
        sloc: 17
        ploc: 17
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 17
        ploc_average: 17
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 17
        sloc_max: 17
        cloc_min: 0
        cloc_max: 0
        ploc_min: 17
        ploc_max: 17
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 94.321
        mi_sei: 60.477
        mi_visual_studio: 55.158
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 10
    N1: 74
    n2: 38
    N2: 72
    length: 146
    estimated_program_length: 232.641
    purity_ratio: 1.593
    vocabulary: 48
    volume: 815.405
    difficulty: 9.474
    level: 0.106
    effort: 7724.885
    time: 429.16
    bugs: 0.13
  loc:
    sloc: 42
    ploc: 38
    lloc: 2
    cloc: 0
    blank: 4
    sloc_average: 14
    ploc_average: 12.667
    lloc_average: 0.667
    cloc_average: 0
    blank_average: 1.333
    sloc_min: 14
    sloc_max: 17
    cloc_min: 0
    cloc_max: 0
    ploc_min: 14
    ploc_max: 17
    lloc_min: 1
    lloc_max: 1
    blank_min: 0
    blank_max: 0
  nom:
    functions: 2
    closures: 0
    functions_average: 0.667
    closures_average: 0
    total: 2
    average: 0.667
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 74.901
    mi_sei: 32.663
    mi_visual_studio: 43.802
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
