snapshots/serde/test_suite/tests/test_unstable.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 10
kind: unit
spaces: []
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 5
    N1: 10
    n2: 9
    N2: 9
    length: 19
    estimated_program_length: 40.139
    purity_ratio: 2.113
    vocabulary: 14
    volume: 72.34
    difficulty: 2.5
    level: 0.4
    effort: 180.849
    time: 10.047
    bugs: 0.011
  loc:
    sloc: 10
    ploc: 4
    lloc: 0
    cloc: 5
    blank: 1
    sloc_average: 10
    ploc_average: 4
    lloc_average: 0
    cloc_average: 5
    blank_average: 1
    sloc_min: 10
    sloc_max: 10
    cloc_min: 5
    cloc_max: 5
    ploc_min: 4
    ploc_max: 4
    lloc_min: 0
    lloc_max: 0
    blank_min: 1
    blank_max: 1
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 111.205
    mi_sei: 129.292
    mi_visual_studio: 65.032
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
